TSDUCK CHANGE LOG AND RELEASE NOTES

-------------------------------------------------------------------------------

VERSION 3.22-1843

[IMP] Improvements on existing commands and plugins:

  * New options in exiting commands and plugins:
    - Option --format in plugin "file" (input, output and packet processor).
    - Option --size-of-packet in "tsftrunc".

[BUG] Bug fixes:

  * Fixed issue #587: Due to an intermediate integer overflow, the report PCR
    jitters were sometimes completely incorrect.

-------------------------------------------------------------------------------

VERSION 3.21-1811

[NEW] New commands and plugins:

  * Added command "tscharset" to perform manual string encoding and decoding
    using various DVB and ARIB character sets.

[IMP] Improvements on existing commands and plugins:

  * LNB's for satellite reception are now preconfigured from an XML file.
    Polarization-controlled LNB's are now supported. Added "default.lnb"
    in global configuration file.
  * General improvement of Japanese TV support:
    - Japanese character sets as defined in ARIB STD-B24.
    - Partial ISDB signalization, as defined in ARIB STD-B10.
    - Option --japan triggers suitable defaults for Japanese TV.
  * New options in exiting commands and plugins:
    - Option --initial-input-packets in "tsp".
    - Options --reopen-on-error, --max-retry and --retry-interval in
      output plugin "file".
    - Option --stream-id in "tsscan" and plugins "dvb", "filter".
    - Option --japan in "tsanalyze", "tspsi", "tstabcomp", "tstabdump",
      "tstables", "tsterinfo" and plugins "analyze", "psi", "tables", "dvb".
    - Options --default-charset, --europe and --japan to "tspacketize",
      "tsscan" and plugins "aes", "clear", "descrambler", "inject", "nitscan",
      "pmt", "rmsplice", "scrambler", "sdt", "spliceinject", "svremove",
      "svrename", "teletext", "zap".
    - Option --drop-to-maintain-preload in output plugin "dektec".